# verbia

./: LICENSE  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
verbia-cli/: pyproject.toml
verbia-core/: pyproject.toml
verbia-core/tests/: test_gemini.py  test_vocabulary.py
