[project]
name = "verbia-core"
version = "0.1.3"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "langcodes>=3.5.0",
    "requests>=2.32.3",
    "aiohttp>=3.11.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
